import java.util.Random;

public class Bracket {

    public void randomSeeding() {
        Random rand = new Random();
    }



    public void matchHistory() {

        
        
    }

    public void nextMatchReminder() {
        
        

    }

    public void startMatch() {
        
        

    }

}
