import java.util.ArrayList;

public class Player {

    private String name;
    private String playerMail;

    public Player(String name) {
        this.name = name;
    }

    public void createTeam() {

    }

    public void leaveTeam() {

    }

    @Override
    public String toString() {
        return name+"";
    }
}
